# Copyright 2017 Polonite Authors. All rights reserved.
# Distributed under MIT license that can be found in the LICENSE file.

component("Xml") {
  deps = [
    "../Base",
    "ThirdParty/expat",
    "ThirdParty/libxml",
  ]
  defines = [ "STP_XML_IMPLEMENTATION" ]
  sources = [
    "Export.h",
    "QualifiedName.cpp",
    "QualifiedName.h",
    "XmlAttributes.h",
    "XmlConstants.h",
    "XmlContentHandler.h",
    "XmlDefaultHandler.cpp",
    "XmlDefaultHandler.h",
    "XmlErrorHandler.h",
    "XmlExpatParser.cpp",
    "XmlExpatParser.h",
    "XmlNamespaceContext.h",
    "XmlNamespaceSupport.cpp",
    "XmlNamespaceSupport.h",
    "XmlReader.h",
    "XmlSaxParser.cpp",
    "XmlSaxParser.h",
  ]
}
